# lem_in_remastered

./: CMakeLists.txt  Makefile  README.md  auteur  lem-in  result  test
42_checker/maps/invalid/: empty_line_no_end_defined
includes/: error_code.h  lem_in.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h
libft/src/ft_math/: ft_recursive_power.c
libft/src/ft_num/: ft_atoll.c  ft_count_spaces.c
libft/src/ft_str/: ft_error_found.c  ft_free_split_str.c
map_test/: test2.map  test6.map  work_map.map
maps/: 1k.map  bad.map  comments.map  cursus.map  double.map  double_but_hard.map  hard.map  leaks.map  noant.map  nocomment.map  noway.map  osef.map  quadra.map  triple.map  zero_example.map
src/: bfs.c  buffer.c  check_path.c  commands.c  copy_lines.c  create_in_out_links.c  debug.c  delete_dead_links.c  delete_input_links.c  delete_output_links.c  djikstra.c  engine.c  engine_utils.c  errors.c  form_path.c  free_data.c  free_data2.c  get_info.c  get_links_position.c  get_real_links_connections.c  hashmap.c  init_structs.c  launch_ants.c  lem_in.c  link_optimization.c  moving.c  moving_utils.c  parse.c  parse_utils.c  printing.c  queue.c  utils.c  validation.c  verify.c  verify_utils.c
